# simple-motor-control

./: CMakeLists.txt  ControlSystem.cpp  ControlSystem.hpp  HalFlink.json  HwConfigBBBlue.json  HwConfigFlink.json  HwConfigFlinkMicrozed.json  MainSequence.hpp  README.md  SMCSafetyProperties.cpp  SMCSafetyProperties.hpp  SimpleMotorControl.cpp
cmake/: versionCheckHelpers.cmake
doc/: SafetySystem.xlsx
